flux-config/infrastructure/kiali/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
    name: kiali-operator
